add img and info

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 <body>
     
     <h1>Reporsitorio remoto con GitHub</h1>
-    
+
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum sed corrupti aliquid, iste ipsum fugiat distinctio officia veritatis! Non perspiciatis, nostrum quos consectetur similique eos quae blanditiis illo dolorum eaque.</p>
 
+    <div>
+        <img src="./img/coco.jpeg" alt="coco">
+    </div>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor saepe temporibus dolore laudantium id enim quos, rerum iusto, accusamus tempora distinctio, minus voluptatem quae. Deserunt minima totam omnis libero eaque?
+    </p>
 </body>
 </html>
